[project]
name = "seaf"
version = "0.1.0"
description = "SEAF Quantitative Backtest Framework — multi-process streaming factor pipeline"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PERF", # perflint
    "FURB", # refurb
    "RSE",  # flake8-raise
    "TCH",  # flake8-type-checking
]
ignore = [
    "PLR0913",    # too-many-arguments
    "PLR2004",    # magic-value-comparison
    "D",          # pydocstyle — too aggressive for this codebase
    "RUF002",     # ambiguous-unicode-character-docstring — CJK intended
    "RUF003",     # ambiguous-unicode-character-comment — CJK intended
    "N806",       # non-lowercase-variable-in-function — UPPER_CASE constants intentional
    "PLC0415",    # import-outside-toplevel — json imports in utility functions
    "PLR0912",    # too-many-branches — intentional in flow/node/factor code
    "PLR0915",    # too-many-statements — intentional in complex functions
    "PERF401",    # use-list-comprehension — stylistic preference
    "E501",       # line-too-long — handled by formatter
]
exclude = [
    "scripts/_*",
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["S101", "PT004", "PT011", "PLR2004", "N806", "PLC0415", "E402", "RUF012", "N803", "B017"]
"scripts/*.py" = ["PLR0913", "T201", "INP001", "E402", "RUF001"]
"seafquant/factor/*.py" = ["E701", "E702"]
"seafquant/model_node.py" = ["N803"]
"seafquant/model_wrappers.py" = ["N803"]
"test/crossval_helpers.py" = ["PLW0603"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = false
no_implicit_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "sklearn.*",
    "scipy.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
timeout = 300